--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
     <header class="relative w-full h-[90vh] flex items-center justify-center overflow-hidden pt-20">
         <div class="absolute inset-0 z-0" id="hero-bg">
-            <video autoplay muted loop playsinline class="w-full h-full object-cover opacity-90" poster="https://images.pexels.com/photos/3760259/pexels-photo-3760259.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+            <video autoplay muted loop playsinline class="w-full h-full object-cover opacity-90" poster="https://orewatasi100-lang.github.io/test/kbparkヒーロー画像.png">
                 <source src="https://videos.pexels.com/video-files/3165275/3165275-hd_1920_1080_30fps.mp4" type="video/mp4">
-                <img src="https://images.pexels.com/photos/3760259/pexels-photo-3760259.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="w-full h-full object-cover">
+                <img src="https://orewatasi100-lang.github.io/test/kbparkヒーロー画像.png" class="w-full h-full object-cover">
             </video>
             <div class="absolute inset-0 bg-pop-orange/20 mix-blend-multiply"></div>
             <div class="absolute inset-0 bg-black/10"></div>
@@ -138,7 +138,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="js-scroll slide-left relative">
                     <div class="absolute top-[-20px] left-[-20px] bg-pop-orange w-20 h-20 rounded-full opacity-20 animate-blob"></div>
-                    <img id="concept-image" src="https://images.unsplash.com/photo-1549476464-d649327564d8?q=80&w=1000&auto=format&fit=crop" class="rounded-[3rem] border-8 border-white shadow-2xl rotate-2 hover:rotate-0 transition duration-500 w-full h-[400px] object-cover relative z-10">
+                    <img id="concept-image" src="https://images.unsplash.com/photo-1562772522-07301c801b7a?q=80&w=1000&auto=format&fit=crop" class="rounded-[3rem] border-8 border-white shadow-2xl rotate-2 hover:rotate-0 transition duration-500 w-full h-[400px] object-cover relative z-10" alt="コンセプトイメージ">
                 </div>
                 
                 <div class="js-scroll slide-right space-y-6">
@@ -186,7 +186,7 @@
                 <div class="js-scroll fade-up area-card group">
                     <div class="img-box">
                         <span class="badge bg-pop-orange">MAIN</span>
-                        <img id="wall-run-image" src="https://images.unsplash.com/photo-1562772522-07301c801b7a?q=80&w=1000&auto=format&fit=crop" alt="Free Jump">
+                        <img id="wall-run-image" src="https://images.unsplash.com/photo-1552662322-b6486cb22e6e?q=80&w=1000&auto=format&fit=crop" alt="Free Jump Area">
                     </div>
                     <div class="p-6 text-center">
                         <h3 class="text-xl font-bold text-pop-orange mb-2">フリージャンプ</h3>
@@ -314,7 +314,7 @@
                 </div>
             </div>
             <div class="w-full md:w-1/2 bg-gray-700 rounded-2xl h-80 flex items-center justify-center relative overflow-hidden group">
-                 <img src="https://images.unsplash.com/photo-1524661135-423995f22d0b?q=80&w=1000&auto=format&fit=crop" class="w-full h-full object-cover opacity-50 group-hover:opacity-100 transition duration-500">
+                 <img src="https://images.unsplash.com/photo-1569336415962-a4bd9f69cd83?q=80&w=1000&auto=format&fit=crop" class="w-full h-full object-cover opacity-50 group-hover:opacity-100 transition duration-500" alt="Map placeholder">
                  <a href="#" class="absolute bg-pop-orange text-white px-6 py-3 rounded-full font-bold shadow-lg hover:scale-110 transition">Google Mapで開く</a>
             </div>
         </div>
