--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
     <header class="relative w-full h-[90vh] flex items-center justify-center overflow-hidden pt-20">
         <div class="absolute inset-0 z-0" id="hero-bg">
-            <video autoplay muted loop playsinline class="w-full h-full object-cover opacity-90" poster="https://orewatasi100-lang.github.io/test/kbparkヒーロー画像.png">
+            <video autoplay muted loop playsinline class="w-full h-full object-cover opacity-90" poster="https://orewatasi100-lang.github.io/kbpark_test/kbpark%E3%83%92%E3%83%BC%E3%83%AD%E3%83%BC%E7%94%BB%E5%83%8F.png">
                 <source src="https://videos.pexels.com/video-files/3165275/3165275-hd_1920_1080_30fps.mp4" type="video/mp4">
-                <img src="https://orewatasi100-lang.github.io/test/kbparkヒーロー画像.png" class="w-full h-full object-cover">
+                <img src="https://orewatasi100-lang.github.io/kbpark_test/kbpark%E3%83%92%E3%83%BC%E3%83%AD%E3%83%BC%E7%94%BB%E5%83%8F.png" class="w-full h-full object-cover">
             </video>
             <div class="absolute inset-0 bg-pop-orange/20 mix-blend-multiply"></div>
             <div class="absolute inset-0 bg-black/10"></div>
